<resources>
    <string name="app_name">SUMI-CO</string>
    <string name="course_button_name">Курсы</string>
    <string name="mark_button_text">Оценки</string>
    <string name="record_button_text">Запись</string>
    <string name="schedule_button_text">Расписание</string>
    <string name="competitions_button_text">Состязание</string>
    <string name="command_button_text">По предмету</string>
    <string name="null_content_text">Нет Контента</string>
    <string name="email_hint">email</string>
    <string name="sign_in_text">Вход</string>
    <string name="password_hint">Пароль</string>
    <string name="login_btn_text">Войти</string>
    <string name="zero_user_point">0 points</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>