<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/sign_in_text"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="200sp"
        android:textColor="@color/blue">

    </TextView>



    <RelativeLayout
        android:id="@+id/user_login_info"
        android:layout_below="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        >
        <EditText
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="250sp"
            android:hint="@string/email_hint"
            android:layout_marginTop="20sp"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            >

        </EditText>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_email"
            android:width="250sp"
            android:hint="@string/password_hint"
            android:backgroundTint="@color/black"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            >

        </EditText>

        <TextView
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_password"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:text=""
            android:textColor="@color/red"
            android:width="200dp"
            >

        </TextView>
    </RelativeLayout>


    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100sp"
        android:height="50sp"
        android:layout_below="@+id/user_login_info"
        android:text="@string/login_btn_text"
        android:background="@drawable/login_button_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        >

    </TextView>





</RelativeLayout>