<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Вставка header -->
            <include
                layout="@layout/action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Контент -->
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="40dp">

                    <!-- Кнопка "Курсы" -->
                    <LinearLayout
                        android:id="@+id/course_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/course_button_background"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="30dp"
                            android:layout_weight="1"
                            android:text="@string/course_button_name"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <ImageView
                            android:id="@+id/course_button_img"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:src="@drawable/course_button" />
                    </LinearLayout>

                    <!-- Кнопка "Оценки" -->
                    <LinearLayout
                        android:id="@+id/mark_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:background="@drawable/mark_button_background"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="30dp"
                            android:layout_weight="1"
                            android:text="@string/mark_button_text"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <ImageView
                            android:id="@+id/mark_button_img"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:src="@drawable/mark_button_img" />
                    </LinearLayout>

                    <!-- Кнопка "Журнал" -->
                    <LinearLayout
                        android:id="@+id/record_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:background="@drawable/record_button_background"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="30dp"
                            android:layout_weight="1"
                            android:text="@string/record_button_text"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <ImageView
                            android:id="@+id/record_button_img"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:src="@drawable/record_button_img" />
                    </LinearLayout>

                    <!-- Кнопка "Расписание" -->
                    <LinearLayout
                        android:id="@+id/schedule_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:background="@drawable/schedule_button_background"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="30dp"
                            android:layout_weight="1"
                            android:text="@string/schedule_button_text"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <ImageView
                            android:id="@+id/schedule_button_img"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:src="@drawable/schedule_button_img" />
                    </LinearLayout>

                    <!-- Кнопка "Соревнования" -->
                    <LinearLayout
                        android:id="@+id/competitions_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:background="@drawable/competitions_button_background"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="30dp"
                            android:layout_weight="1"
                            android:text="@string/competitions_button_text"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <ImageView
                            android:id="@+id/competitions_button_img"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:src="@drawable/competitions_button_img" />
                    </LinearLayout>

                    <!-- Кнопка "Команда на предмет" -->
                    <LinearLayout
                        android:id="@+id/command_to_subject_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:background="@drawable/command_button_background"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="30dp"
                            android:layout_weight="1"
                            android:text="@string/command_button_text"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <ImageView
                            android:id="@+id/command_img"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:src="@drawable/command_button_img" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <!-- Плавающая кнопка чата -->
        <ImageView
            android:id="@+id/chatButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="30dp"
            android:src="@drawable/chat_button_img"
            android:clickable="true"
            android:focusable="true"/>

    </FrameLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_drawer_layout" />

</androidx.drawerlayout.widget.DrawerLayout>
